--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ width: 60%;
 /*Entire projects section*/
 #projects {
 	margin: 0 auto;
-	/*width: 90%;*/
+	width: 90%;
 	padding-top: 70px;
 	padding-bottom: 70px;
 	clear: both;
@@ -319,14 +319,15 @@ width: 60%;
 	display: inline-block;
 	/*max-width: 400px;*/
 width: 33%;
-	vertical-align: top;	
+vertical-align: top;	
+	padding-top: 1em;
 }
 
 .projects img {
 	padding: 10px;
 	border: solid 2px #2FBDBB;
 	max-width: 100%;
-	display: block;
+display: inline-block;  /*Adding this aligned the text and images but messed up the overlay. */
 
 -webkit-box-sizing: border-box; /* Android ≤ 2.3, iOS ≤ 4 */
      -moz-box-sizing: border-box; /* Firefox ≤ 28 */
@@ -345,7 +346,7 @@ width: 33%;
     color: white;
     bottom: 0;
     left: 0;
-    margin: 0;
+    /*margin: 0;*/
     opacity: 0;
     padding: 20px;
     position: absolute;
@@ -362,7 +363,7 @@ h2 {
 	font-family: 'Roboto', Avenir, Helvetica, sans-serif;
 	font-weight: 400;
     font-size: 1em;
-    line-height: 1.5em;
+    /*line-height: 1.5em;*/
     color: #58585B;
 }
 
@@ -474,6 +475,14 @@ h2 {
 
 	.projects {
 		width: 100%;
+	}
+
+	h1 {
+		font-size: 2em;
+	}
+
+	h3 {
+		font-size: 1.25em;
 	}
 }
 
